# Deleted because of pending fbs
#add_executable(stateless_validator_test stateless_validator_test.cpp)
#target_link_libraries(stateless_validator_test
#    gtest
#    stateless_validator
#    block_builder
#    signature
#    flatbuffers
#)
#add_test(
#    NAME stateless_validator_test
#    COMMAND $<TARGET_FILE:stateless_validator_test>
#)
